# C-GAP

./: .gitignore  LICENSE  README.md  cgap_run.py  main.py  pyproject.toml  requirements.txt
scripts/: README.md
src/: llm_client.py  models.py  utils.py
src/cgap/: __init__.py  agents.py  cli.py  config.py  exceptions.py  pipeline.py  schema.py  utils.py
src/pipeline/: candidate_selector.py  causal_types.py  phase1_parser.py  phase2_builder.py  phase3_pruner.py  phase4_diagnoser.py
tests/: test_pipeline_demo.py  test_schema.py
