[project]
name = "cgap"
version = "0.1.0"
description = "C-GAP: Causal Graph Attribution Pipeline for MAS logs"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "C-GAP Contributors"}]
dependencies = [
  "pydantic>=2.7",
  "networkx>=3.2",
]

[project.scripts]
cgap = "cgap.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cgap = ["py.typed"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
